@@ -1,3 +1,9 @@
+2012-08-15  Tom Tromey  <tromey@redhat.com>
+
+	* dwarf2read.c (dwarf_decode_macro_bytes)
+	<DW_MACRO_GNU_transparent_include>: Use pointer to included data
+	as hash key.
+
 2012-08-14  Mike Frysinger  <vapier@gentoo.org>
 
 	* infcmd.c (_initialize_infcmd): Update help text for the signal,
